<resources>
    <string name="app_name">Twitter</string>

    <!--     Validators    -->
    <string name="text_validation_success">Validation is success !</string>
    <string name="text_validation_error_empty_field">This field cannot be left blank !</string>
    <string name="text_validation_error_email_field">Please enter a valid email address !</string>
    <string name="text_validation_error_phone_field">Please enter a valid phone number !</string>

    <string name="next">Next</string>
    <string name="default_name_count">50</string>

    <!--     Lorem    -->
    <string name="lorem2">Lorem impsun </string>
    <string name="lorem3">Lorem impsun dolor</string>
    <string name="lorem5">Lorem impsun dolor sit amet</string>

    <!--     Starter Activity    -->

    <!-- Welcome Fragment -->
    <string name="welcomeText">See whats happening in the world right now.</string>
    <string name="SignInWithGoogle">Continue with Google</string>
    <string name="Register">Create Account</string>
    <string name="LogIn">Have An Account Already? Log in</string>
    <string name="WelcomePrivacy">By signing up, you agree to our Terms, Privacy Policy, and Cookie Use.</string>
    <string name="welcomeDivider">Or</string>

    <!-- Register First Fragment -->
    <string name="register_first_page_title">Create your account</string>
    <string name="register_first_input_name">Name</string>
    <string name="register_first_input_contact">Phone number or email address</string>
    <string name="register_first_date_of_birth">Date of birth</string>
    <string name="register_first_use_email">Use email instead</string>
    <string name="register_first_use_phone">Use phone instead</string>

    <!-- Register Second Fragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registerSecondHead">Customize your experience</string>
    <string name="register_second_content1">Twitter uses this data to personalize your experience. This web browsing history will never be stored with your name, email, or phone number.</string>
    <string name="register_second_content2">For more details about these settings, visit the Help Center.</string>

    <!-- Register Third Fragment -->
    <string name="register_third_head">Create your account</string>
    <string name="register_third_content">By signing up, you agree to the Terms of Service and Privacy Policy, including Cookie User. Others will be able to find you by email or phone number when provided. Privacy Policy.</string>
    <string name="register_third_sign_up">Sign Up</string>




</resources>