<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by cemaltuysuz on 11/21/21, 6:05 PM
  ~  * Copyright (c) 2021 . All rights reserved.
  ~  * Last modified 11/21/21, 6:03 PM
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.starter.RegisterThirdFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registerThirdHead"
        android:layout_width="@dimen/welcome_text_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/starter_activity_margin"
        android:layout_marginTop="@dimen/register_third_head_margin_top"
        android:text="@string/register_third_head"
        android:textStyle="bold"
        android:textSize="@dimen/welcome_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RelativeLayout
        android:padding="15dp"
        android:id="@+id/registerThirdInfoContainer"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/registerThirdHead">

        <!-- User name -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/registerThirdNameInfo"
            style="@style/RegisterInputStyle"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:drawableTint="@android:color/holo_green_dark"
            android:hint="@string/register_first_input_name"
            android:maxLength="50" />

        <!-- User Contact -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/registerThirdContactInfo"
            style="@style/RegisterInputStyle"
            android:layout_below="@+id/registerThirdNameInfo"
            android:layout_marginTop="@dimen/between_register_inputs"
            android:drawableTint="@android:color/holo_green_dark"
            android:hint="@string/register_first_input_contact" />

        <!-- User Date Of Birth -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/registerThirdDateOfBirthInfo"
            style="@style/RegisterInputStyle"
            android:layout_below="@+id/registerThirdContactInfo"
            android:layout_marginTop="@dimen/between_register_inputs"
            android:hint="@string/register_first_date_of_birth" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_margin="@dimen/starter_activity_margin"
        android:id="@+id/registerThirdContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register_third_content"
        android:textSize="@dimen/middle_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerThirdInfoContainer" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerSignUpButton"
        android:layout_margin="@dimen/starter_activity_margin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/registerThirdContent"
        android:background="@drawable/light_blue_jr_oval_button"
        android:textAllCaps="false"
        android:text="@string/register_third_sign_up"
        android:textColor="@color/white"
        android:textSize="18sp"/>



</androidx.constraintlayout.widget.ConstraintLayout>