<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by cemaltuysuz on 11/16/21, 6:23 PM
  ~  * Copyright (c) 2021 . All rights reserved.
  ~  * Last modified 11/16/21, 6:17 PM
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.starter.RegisterSecondFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registerSecondHead"
        android:layout_width="@dimen/welcome_text_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/starter_activity_margin"
        android:layout_marginTop="@dimen/welcome_text_margin_top"
        android:text="@string/registerSecondHead"
        android:textStyle="bold"
        android:textSize="@dimen/welcome_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginStart="@dimen/starter_activity_margin"
        android:layout_marginEnd="@dimen/starter_activity_margin"
        android:id="@+id/registerSecondSubHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/welcomeText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerSecondHead" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginStart="@dimen/starter_activity_margin"
        android:id="@+id/registerSecondContent1"
        android:layout_width="@dimen/welcome_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register_second_content1"
        android:textSize="@dimen/middle_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerSecondSubHead" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/registerSecondContent1"
        app:layout_constraintTop_toTopOf="@id/registerSecondContent1"
        android:layout_marginStart="10dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginStart="@dimen/starter_activity_margin"
        android:layout_marginEnd="@dimen/starter_activity_margin"
        android:id="@+id/registerSecondContent2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register_second_content2"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerSecondContent1" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/routeRegisterThirdFragment"
            android:layout_centerVertical="true"
            android:layout_width="76dp"
            android:layout_height="46dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/darker_gray_oval_button"
            android:backgroundTint="@color/black"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>